<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAF0BE"
    tools:context="com.example.android.valequizapp.MainActivity">

    <!--Name Input-->
    <EditText
        android:id="@+id/name_field_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textCapWords" />

    <TextView
        style="@style/HeaderTextStyle"

        android:text="@string/num_question_1" />
    <TextView
        android:id="@+id/Questions"
        style="@style/CategoryStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/category_phrases"
        android:text="What was the first movie Helly Berry acted"
        />


    <CheckBox
        android:id="@+id/redundancy_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/redundancy" />

    <CheckBox
        android:id="@+id/availability_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/availability" />

    <CheckBox
        android:id="@+id/integrity_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/integrity" />

    <CheckBox
        android:id="@+id/confidentiality_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/confidential" />

    <CheckBox
        android:id="@+id/remote_access_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/remote_access" />


    <!--Line-->
    <View style="@style/Line"></View>




    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/num_question_2" />

    <TextView
        android:id="@+id/question2"
        style="@style/CategoryStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#FF007F"
        android:text="The latested Rematic movie acted by Jada Pinkett Smith"/>
    <RadioGroup
        android:id="@+id/question_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/answer_2_1_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/answer_2_1" />

        <RadioButton
            android:id="@+id/answer_2_2_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/answer_2_2" />

        <RadioButton
            android:id="@+id/answer_2_3_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/answer_2_3" />

        <RadioButton
            android:id="@+id/answer_2_4_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/answer_2_4" />
    </RadioGroup>

    <!--Line-->
    <View style="@style/Line">

    </View>


    <!--Question 3-->
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/num_question_3" />


    <TextView
        android:id="@+id/question3"
        style="@style/CategoryStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#006B3C"
        android:text="The new action movie on cinema before december"/>

    <RadioGroup
        android:id="@+id/question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/publ_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/publ" />

        <RadioButton
            android:id="@+id/sensitive_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/sensitive" />

        <RadioButton
            android:id="@+id/confidential_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/confidential" />

        <RadioButton
            android:id="@+id/private_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/_private" />

        <RadioButton
            android:id="@+id/trusty_worthy_radiobutton"
            style="@style/RadioButton_Answer"
            android:text="@string/trusty_worthy" />
    </RadioGroup>

    <!--Line-->
    <View style="@style/Line"></View>

    <!--Question 4-->
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/num_question_4" />



    <TextView
        android:id="@+id/question4"

        style="@style/CategoryStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#7B3F00"
        android:text="The last thirller movie acted by Charlize Theron"/>

    <CheckBox
        android:id="@+id/managerial_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/managerial" />

    <CheckBox
        android:id="@+id/physical_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/physical" />

    <CheckBox
        android:id="@+id/logical_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/logical" />

    <CheckBox
        android:id="@+id/administrative_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/administrative" />

    <CheckBox
        android:id="@+id/geographical_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/geographical" />

    <!--Line-->
    <View style="@style/Line"></View>



    <!--Question 5-->
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/num_question_5" />

    <TextView
        style="@style/CategoryStyle"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#FD8E09"
        android:text="@string/question_5" />

    <CheckBox
        android:id="@+id/answer_5_1_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/answer_5_1" />

    <CheckBox
        android:id="@+id/answer_5_2_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/answer_5_2" />

    <CheckBox
        android:id="@+id/answer_5_3_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/answer_5_3" />

    <CheckBox
        android:id="@+id/answer_5_4_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/answer_5_4" />

    <CheckBox
        android:id="@+id/answer_5_5_checkbox"
        style="@style/Checkbox_Answer"
        android:text="@string/answer_5_5" />

    <!--Line-->
    <View style="@style/Line"></View>

    <Button
        android:id="@+id/end_test_button_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="end_Test"
        android:text="@string/end_test" />



    <!--Line-->
    <View style="@style/Line"></View>
    <!--Test Result-->
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/test_result" />

    <TextView
        android:id="@+id/test_result_text_view_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=" "
        android:textColor="@android:color/black" />

</LinearLayout>
</ScrollView>
