<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FAF0BE"
        tools:context="com.example.android.valequizapp.MainActivity">

        <!--Name Input-->
        <EditText
            android:id="@+id/name_field_celebrities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords" />


<TextView
    style="@style/HeaderTextStyle"
    android:text="@string/num_question_1.1.1" />

        <TextView
            style="@style/CategoryStyle"

            android:id="@+id/question_1.1.1"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#FF007F"
            android:text="@string/question_1.1.1" />

        <CheckBox
            android:id="@+id/redundancyyy_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundancyyy" />

        <CheckBox
            android:id="@+id/availabilityyy_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/availabilityyy" />

        <CheckBox
            android:id="@+id/integrityyy_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/integrityyy" />

        <CheckBox
            android:id="@+id/confidentialityyy_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/confidentialityyy" />

        <CheckBox
            android:id="@+id/remote_accesss_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/remote_accesss" />

        <!--Line-->
        <View style="@style/Line"></View>

        <!--Question 2-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_2.1.1" />

        <TextView

            style="@style/CategoryStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:background="#006B3C"
            android:text="@string/question_2.1.1" />

        <RadioGroup
            android:id="@+id/question_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_2_1_1_1radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_1_1_1" />

            <RadioButton
                android:id="@+id/answer_2_2_2_2radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_2_2_2" />

            <RadioButton
                android:id="@+id/answer_2_3_3_3radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_3_3_3" />

            <RadioButton
                android:id="@+id/answer_2_4_4_4radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_4_4_4" />

            <RadioButton
                android:id="@+id/answer_2_4_4_5radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_4_4_5" />
        </RadioGroup>



        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 3-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_3.1.1" />

        <TextView
            style="@style/CategoryStyle"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#7B3F00"
            android:text="@string/question_3.1.1" />

        <RadioGroup
            android:id="@+id/question_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/tech1_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/tech1" />

            <RadioButton
                android:id="@+id/tech222_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/tech222" />

            <RadioButton
                android:id="@+id/tech333_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/tech333" />

            <RadioButton
                android:id="@+id/tech444_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/tech444" />

            <RadioButton
                android:id="@+id/tech455_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/tech455" />
        </RadioGroup>

        <!--Line-->
        <View style="@style/Line"></View>

        <!--Question 4-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_4_1" />

        <TextView
            style="@style/CategoryStyle"
            android:id="@+id/question_4.1"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#734F96"
            android:text="@string/question_4.1" />

        <CheckBox
            android:id="@+id/redundancy1_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundancy1" />

        <CheckBox
            android:id="@+id/redundency2_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundency2" />

        <CheckBox
            android:id="@+id/redundancy3_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundancy3" />

        <CheckBox
            android:id="@+id/redundancy4_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundancy4" />

        <CheckBox
            android:id="@+id/redundancy5_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/redundancy5" />

        <!--Line-->
        <View style="@style/Line"></View>

        <!--Question 5-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_50" />

        <TextView
            style="@style/CategoryStyle"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#FD8E09"
            android:text="@string/question_50" />

        <CheckBox
            android:id="@+id/answer_5_1_1_1_1checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_1_1_1" />

        <CheckBox
            android:id="@+id/answer_5_2_2_1checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_2_2_1" />

        <CheckBox
            android:id="@+id/answer_5_3_3_3checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_3_3" />

        <CheckBox
            android:id="@+id/answer_5_4_4_4checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_4_4_4" />

        <CheckBox
            android:id="@+id/answer_5_5_5_5_1checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_5_5_5" />

        <!--Line-->
        <View style="@style/Line"></View>



            <Button
            android:id="@+id/end_test_button_celebrities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="end_Test"
            android:text="@string/end_test" />
        <!--Line-->
        <View style="@style/Line"></View>





        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/test_result" />

        <TextView
            android:id="@+id/test_result_text_view_celebrities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=" "
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>
